# arycal

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-image.yml  rust-release.yml  rust.yml
crates/arycal/: Cargo.toml
crates/arycal-cli/: Cargo.toml
crates/arycal-cli/src/: input.rs  lib.rs  main.rs  output.rs
crates/arycal-cloudpath/: Cargo.toml
crates/arycal-cloudpath/src/: compression.rs  lib.rs  main.rs  msnumpress.rs  osw.rs  sqmass.rs  tsv.rs  util.rs  xic_parquet.rs
crates/arycal-common/: Cargo.toml
crates/arycal-common/src/: chromatogram.rs  config.rs  error.rs  lib.rs  logging.rs
crates/arycal-gui/: Cargo.toml
crates/arycal-gui/scripts/: build-wasm.sh
crates/arycal-gui/src/: app.rs  config.rs  lib.rs  main.rs  utils.rs
crates/arycal-gui/src/panels/: alignment_settings.rs  config_panel.rs  mod.rs  openswath_settings.rs  peptide_query_parameter_settings.rs  system_footer.rs  validation_settings.rs  visualization_settings.rs
crates/arycal-gui/src/tabs/: alignment_tab.rs  mod.rs  open_swath_tab.rs  spectral_library_tab.rs  validation_tab.rs  visualization_tab.rs
crates/arycal/src/: lib.rs  scoring.rs  stats.rs
crates/arycal/src/alignment/: alignment.rs  dynamic_time_warping.rs  fast_fourier_lag.rs  fast_fourier_lag_dtw.rs  mod.rs
