[package]
name = "arycal-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arycal"
path = "src/main.rs"

[dependencies]
arycal-common = { path = "../arycal-common/"}
arycal-cloudpath = { path = "../arycal-cloudpath/" }
arycal-core = { path = "../arycal/" }

clap = { version="4.0", features = ["cargo", "unicode"] }
env_logger = "0.11.6"
log = "0.4.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
arrow = "54.2.1"
parquet = "54.2.1"

# Optional MPI support
mpi = { version = "0.8.0", optional = true }

[features]
default = []
mpi = ["dep:mpi"]  # Enable MPI support