[package]
name = "arycal-gui"
version = "0.1.4"
edition = "2021"

[dependencies]
arycal-cli = { path = "../arycal-cli/"}

env_logger = "0.11.6"
log = "0.4.0"
egui = "0.31.0"
eframe = "0.31.0"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["png"] } # Add the types you want support for

rfd = "0.15.2"
os_pipe = "1.2.1"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"